# ex_srp_phat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.ExSrpPhat.Native.exs  mix.exs
.claude/plans/ex-srp-phat/: plan.md  scratchpad.md
.claude/plans/ex-srp-phat/reviews/: elixir.md  ex-srp-phat-review.md  requirements.md  security.md  testing.md
.github/workflows/: ci.yml  release.yml
lib/: ex_srp_phat.ex
lib/ex_srp_phat/: codec.ex  geo.ex  native.ex  source.ex
native/srp_phat/: Cargo.toml
native/srp_phat/.cargo/: config.toml
native/srp_phat/src/: codec.rs  gcc_phat.rs  lib.rs  solve.rs  srp.rs  tests.rs  wgs84.rs
test/: codec_test.exs  ex_srp_phat_test.exs
